--- a/components/buttons/buttons.css
+++ b/components/buttons/buttons.css
@@ -15,7 +15,7 @@
 body h1 {
     color: white;
     font-size: 60px;
-    margin-bottom: 300px;
+    margin-bottom: 175px;
 }
 
 .button {
@@ -44,22 +44,28 @@ body h1 {
 }
 
 #theme_container {
+    height: 250px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 23px;
+    gap: 32px;
+    margin-bottom: 128px;
 }
 
 .theme_button {
+    height: 100%;
+    width: 322px;
+    padding: 60px, 5px, 60px, 5px, 60px;
     display: flex;
-    width: 201px;
-    height: 60px;
-    padding: 5px 60px;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    flex-shrink: 0;
     border-radius: 20px;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.45);
+}
+
+h2 {
+    margin-bottom: 20px;
+    color: white;
 }
