--- a/components/buttons/buttons.css
+++ b/components/buttons/buttons.css
@@ -13,11 +13,11 @@
 .button {
     height: 50px;
     font-size: 16px;
+    font-family: "chewy";
     color: white;
     border: none;
     border-radius: 100px;
-    cursor: pointer;
-    
+    cursor: pointer;    
 }
 
 
