--- a/static/style/index.css
+++ b/static/style/index.css
@@ -17,6 +17,17 @@
     background-color: pink;
 } */
 
+#wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #4A90E2;
+    background-image: url('../../static/media/bakgrund.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
 
 .button {
     font-family: 'chewy';
