--- a/static/style/index.css
+++ b/static/style/index.css
@@ -1,33 +1,40 @@
 @font-face {
     font-family: 'chewy';
-    src: url('./static/fonts/Chewy/Chewy-Regular.ttf');
+    src: url('../fonts/Chewy/Chewy-Regular.ttf');
 }
 
 @font-face {
     font-family: 'montserrat';
-    src: url("./static/fonts/Montserrat/Montserrat-VariableFont_wght.ttf");
+    src: url("../fonts/Montserrat/Montserrat-VariableFont_wght.ttf");
 }
 
 @font-face {
     font-family: 'cabinCondensed';
-    src: url("./static/fonts/Cabin_Condensed/CabinCondensed-SemiBold.ttf");
+    src: url("../fonts/Cabin_Condensed/CabinCondensed-SemiBold.ttf");
 }
 
-/* body {
-    background-color: pink;
-} */
+body {
+    background: #4A90E2;
+    background-image: url('../../static/media/bakgrund.png');
+     background-size: cover;
+     background-repeat: no-repeat;
+     background-position: center;
+     height: 100vh;
+     width: 100vw;
+}
 
 #wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #4A90E2;
-    background-image: url('../../static/media/bakgrund.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    background-color: rgba(74, 144, 226, 0.8);
+
+    height: 100%;
+    width: 100%;
 }
+
+
 
 .button {
     font-family: 'chewy';
