--- a/components/selectThemePage/selectThemePage.css
+++ b/components/selectThemePage/selectThemePage.css
@@ -15,3 +15,9 @@ h2 {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.45);
     border: white;
 }
+
+/* img {
+    height: 50px;
+    width: auto;
+} */
+
