--- a/static/style/index.css
+++ b/static/style/index.css
@@ -14,13 +14,11 @@
 }
 
 body {
-    background: #4A90E2;
     background-image: url('../../static/media/bakgrund.png');
-     background-size: cover;
-     background-repeat: no-repeat;
-     background-position: center;
-     height: 100vh;
-     width: 100vw;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh;
 }
 
 #wrapper {
@@ -29,11 +27,9 @@ body {
     justify-content: center;
     align-items: center;
     background-color: rgba(74, 144, 226, 0.8);
-
-    height: 100%;
-    width: 100%;
+    height: 100%; 
+    /* ta bort height?? */
 }
-
 
 
 .button {
