--- a/components/header/header.css
+++ b/components/header/header.css
@@ -3,8 +3,8 @@
     display: grid;
     grid-template-columns: 1fr 2fr 0.5fr;
     align-items: center;
-    margin-bottom: 150px;
-    margin-top: 50px;
+    position: fixed;
+    top:61px;
     column-gap: 72px;
 }
 
