--- a/components/joinPage/joinPage.css
+++ b/components/joinPage/joinPage.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    margin-top: 161px;
+    position: absolute;
+    top: 312px;
     
     
 }
