--- a/components/selectThemePage/selectThemePage.css
+++ b/components/selectThemePage/selectThemePage.css
@@ -3,8 +3,20 @@ h2 {
     margin-bottom: 32px;
 }
 
+#theme_container {
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+    position: absolute;
+    top:240px;
+   
+}
+
 .themeButton {
-    height: 100%;
+    height: 60px;
     width: 322px;
     padding: 60px, 5px, 60px, 5px, 60px;
     display: flex;
@@ -16,8 +28,9 @@ h2 {
     border: white;
 }
 
-/* img {
-    height: 50px;
-    width: auto;
-} */
+#nextBttn {
+    position: absolute;
+    top: 675px;
+
+}
 
