--- a/static/style/index.css
+++ b/static/style/index.css
@@ -27,20 +27,16 @@ body {
     justify-content: center;
     align-items: center;
     background-color: rgba(74, 144, 226, 0.8);
-    height: 100%; 
-    /* ta bort height?? */
-}
-
-
-.button {
-    font-family: 'chewy';
-    color: white;
+    height: 100%;
+    position: relative;
+    
 }
 
 h2 {
     font-family: "montserrat";
     font-weight: bold;
     color: white;
+    text-transform: uppercase;
 }
 
 .card p {
