overflow hidden for body

--- a/static/style/index.css
+++ b/static/style/index.css
@@ -19,6 +19,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     height: 100vh;
+    overflow: hidden;
 }
 
 #wrapper {
