--- a/components/joinPage/joinPage.css
+++ b/components/joinPage/joinPage.css
@@ -19,6 +19,7 @@
     border: none;
     height: 50px;
     width: 321px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
 
     text-align: center;
     text-transform: capitalize;
