--- a/components/game/gameBoard.css
+++ b/components/game/gameBoard.css
@@ -131,4 +131,11 @@ textarea {
     height: 35px;
 }
 
+.yourAvatarCard img {
+    height: 100px;
+}
+
+.yourAvatarCard p {
+    height: 100px;
+}
 
