--- a/components/popUpExit/popUpExit.css
+++ b/components/popUpExit/popUpExit.css
@@ -11,7 +11,7 @@
     z-index: 1000; 
 }
 
-.popup-container {
+.popupExit-container {
     background: white;
     padding: 50px 20px;
     border-radius: 10px;
@@ -21,4 +21,22 @@
     position: relative;
     text-align: Center;
     position: relative;
+}
+
+.button-container{
+    display: flex;
+    padding: 0px 12px;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-self: stretch;
+}
+
+.popup-title {
+    color: #000;
+    text-align: center;
+    font-family: "cabinCondensed";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
