error handling on joinPage, fixed some css

--- a/components/characterPage/characterPage.css
+++ b/components/characterPage/characterPage.css
@@ -39,7 +39,14 @@
     /* margin-top: 50px; */
     grid-column: 2;
     grid-row: 1;
+    text-align: center;
 }
+
+#bigCard p {
+    font-family: "cabinCondensed";
+}
+
+
 
 #bigCardImage {
     margin-top: -5px;
@@ -50,6 +57,6 @@
 
 #confirmBttn {
     margin-top: 34px;
-    margin-bottom: 34px;
+    /* margin-bottom: 34px; */
 }
 
