--- a/components/selectThemePage/selectThemePage.css
+++ b/components/selectThemePage/selectThemePage.css
@@ -28,6 +28,10 @@ h2 {
     border: white;
 }
 
+.themeSelected {
+    border: 3px solid black;
+}
+
 #nextBttn {
     position: absolute;
     top: 675px;
