--- a/components/waitingRoom/waitingRoom.css
+++ b/components/waitingRoom/waitingRoom.css
@@ -1,6 +1,6 @@
 #codeDiv {
     font-family: 'chewy';
-    font-size: 24px;
+    font-size: 26px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
     color: #00e7ff;
     position: absolute;
@@ -9,9 +9,7 @@
     flex-direction: column;
     align-items: center;
     gap: 8px;
-
-    position: absolute;
-    top: 680px;
+    margin-top: 50px;
 }
 
 #codeDiv div {
@@ -40,7 +38,7 @@
     background-size: cover;
     background-position: center;
     position: absolute;
-    top: 245px;
+    top: 642px;
 }
 
 .theme_marvel {
