changed font-family for the game's code

--- a/components/waitingRoom/waitingRoom.css
+++ b/components/waitingRoom/waitingRoom.css
@@ -20,7 +20,7 @@
 #code {
     background: transparent;
     border: none;
-    font-family: 'chewy';
+    font-family: 'cabinCondensed';
     font-size: 26px;
     resize: none;
     width: 75px;
