--- a/components/chat/gameChat.css
+++ b/components/chat/gameChat.css
@@ -1,14 +1,14 @@
-#chatBttn {
-    height: 35px;
+#chatIconDiv {
+    height: 50px;
+    width: 40px;
 
     position: fixed;
     right: 20px;
     bottom: 50px;
 }
 
-#chatIconDiv {
-    height: 50px;
-    width: 50px;
+#chatBttn {
+    height: 35px;
 }
 
 #chatOverlay {
@@ -73,4 +73,13 @@
 
 .msg {
     font-size: 16px;
+}
+
+#notificationDot {
+    border-radius: 50%;
+    width: 12px;
+    height: 12px;
+    position: relative;
+    bottom: 85%;
+    background-color: rgb(255, 82, 82);
 }
