Updated css for disabled buttons

--- a/components/game/gameBoard.css
+++ b/components/game/gameBoard.css
@@ -144,4 +144,8 @@ textarea {
 
 .disabled {
     cursor: not-allowed;
+    box-shadow: none;
+    opacity: 85%;
+    background-color: #BDBDBD;
+    color: #F5F5F5;
 }
