--- a/components/chat/gameChat.css
+++ b/components/chat/gameChat.css
@@ -4,7 +4,7 @@
 
     position: fixed;
     right: 20px;
-    bottom: 50px;
+    bottom: 10px;
 }
 
 #chatBttn {
@@ -22,6 +22,7 @@
     justify-content: center;
     align-items: center;
     z-index: 1000; 
+    flex-direction: column-reverse;
 }
 
 #exitBttn {
@@ -46,6 +47,7 @@
 
 #sendBttn {
     position: absolute;
+    height: 35px;
     bottom: 50px;
     right: 20px;
     padding: 5px 10px;
@@ -53,16 +55,15 @@
 }
 
 .chatBubble {
-    background-color: lightseagreen;
-    color: white;
     font-family: "cabinCondensed";
     display: flex;
-    flex-direction: column;
-    border-radius: 100px;
-    width: 200px;
+    width: 100%;
     height: 50px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
-    padding: 5px 20px;
+    border: 1px solid black;
+    align-items: center;
+    padding: 10px 10px 10px 10px;
+    gap: 50px;
 }
 
 .guestName {
@@ -82,4 +83,21 @@
     position: relative;
     bottom: 85%;
     background-color: rgb(255, 82, 82);
+}
+
+#chatHistory {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    width: 350px; 
+    border: 1px solid black;
+    gap: 5px;
+    padding: 2px;
+
+}
+
+#chatHistory h1 {
+    font-family: "cabinCondensed";
+    font-size: 30px;
+    margin: 15px 10px 15px;
 }
